...
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <!-- android:layout_marginTop="-4dp" is a hack to reduce top extra spacing of textview -->
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:textColor="@color/textPrimary"
            android:textSize="17sp"
            android:text="Test title of news"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/textSecondary"
            android:textSize="15sp"
...
